# RPiPicoProjects

./: .clang-format  .gitignore  BuildingPicoProjects.md  pico_led_indicators.h
.includes/: README.md  lwipopts.h  lwipopts.h.OLD_BROKEN
C_hello_world_led/: CMakeLists.txt
C_motion_notifier_range_sensor/: CMakeLists.txt  lwipopts.h  tls_common.c  tls_verify.c
C_pico_led_indicators/: pico_led_indicators.c
hello_world_led/: hello_world_led.c  hello_world_led.uf2
motion_notifier-upy/: motion_notifier.py  reset_leds.py  test_led.py
motion_notifier_range_sensor/: CMakeLists.txt  motion_notifier_range_sensor.c
uPy_leds/: test_led.py
uPy_motion_notifier/: debug.py  main.py  motion_notifier.py
